Added /logout-all.
